// to generate: npm install -g protoc-gen-js 
//protoc --js_out=import_style=commonjs,binary:. .\job-service.proto
syntax = "proto3";

message JobRequest {
    int32 id = 1;
}

message JobResponse {
    int32 id = 1;
    string title = 2;
    string level = 3;
    string jobType = 4;
    string endDate = 5;
}

message CreateCompanyRequest {
    string hrId = 1;
    string name = 2;
    string phoneNumber = 3;
}

message CreateCompanyResponse {
    string companyId = 1;
    bool isOk = 2;
}

message GetCompanyStatusRequest {
    string hrId = 1;
}

message GetCompanyStatusResponse {
    int32 status = 1;
}

service JobService {
    rpc GetCompanyStatus (GetCompanyStatusRequest) returns (GetCompanyStatusResponse);
    rpc GetJobInformation (JobRequest) returns (JobResponse);
    rpc UpdateApplyCountGrpc (JobRequest) returns (JobResponse);
    rpc CreateCompanyGrpc (CreateCompanyRequest) returns (CreateCompanyResponse);
}